@@ -1,3 +1,7 @@
+2008-04-10  Robert Ancell  <robert.ancell@gmail.com>
+
+	* src/lib/gtkui/network.py: Handle missing throbber icons (Bug #524829)
+
 2008-04-5  Robert Ancell  <robert.ancell@gmail.com>
 
 	* src/lib/gtkui/chessview.py: Abort 3D render if widget_get_gl_context() returns None (Bug #512068)
